Made it into a one page project, shifted all the data from the other pages into homepage html and css and have given comment start and end section for each specific section

--- a/src/homepage.html
+++ b/src/homepage.html
@@ -89,6 +89,236 @@
     </div>
 
     <!-- Main End -->
+    <!-- Main Content Skills Start -->
+    <div class="main-content-skill">
+      <div class="main-contentleftskill">
+        <h1 class="main-contentleft-h1skill">Skills</h1>
+        <p class="main-contentleft-pskill">
+          Over time, I’ve developed a solid foundation in front-end web
+          development, with hands-on experience in HTML, CSS, and JavaScript. I
+          enjoy creating clean, responsive, and user-friendly interfaces that
+          bring ideas to life. My understanding of design principles, layout
+          systems, and animation helps me build websites that are both
+          functional and visually engaging. Beyond the basics, I’ve also
+          explored tools like MySQL and Java, strengthening my problem-solving
+          abilities and backend understanding. Whether working independently or
+          in a team, I’m always eager to learn, adapt, and push the boundaries
+          of what I can create on the web.
+        </p>
+      </div>
+      <div class="main-contentrightskill">
+        <div class="skills">
+          <div class="skill-bar">
+            <span>HTML</span>
+            <div class="bar html"></div>
+          </div>
+          <div class="skill-bar">
+            <span>CSS</span>
+            <div class="bar css"></div>
+          </div>
+          <div class="skill-bar">
+            <span>JavaScript</span>
+            <div class="bar js"></div>
+          </div>
+          <div class="skill-bar">
+            <span>MySQL</span>
+            <div class="bar mysql"></div>
+          </div>
+          <div class="skill-bar">
+            <span>Python</span>
+            <div class="bar python"></div>
+          </div>
+        </div>
+        <div class="pie-container">
+          <div class="pie-chart">
+            <span class="center-text">Overall</span>
+          </div>
+          <ul class="legend">
+            <li><span class="html-pie"></span> HTML - 90%</li>
+            <li><span class="css-pie"></span> CSS - 90%</li>
+            <li><span class="js-pie"></span> JavaScript - 80%</li>
+            <li><span class="mysql-pie"></span> MySQL - 70%</li>
+            <li><span class="python-pie"></span> Python - 65%</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <!-- Main Content Skills End -->
+    <!-- Main Content Achievements Start -->
+    <div class="main-divproj">
+      <div class="main-div-leftproj">
+        <h1 class="main-div-left-h1proj">Achievements</h1>
+        <p class="main-div-left-pproj">
+          Throughout my journey, I’ve had the privilege of earning several
+          certifications that reflect my dedication to continuous learning and
+          skill development. These achievements not only validate my knowledge
+          but also inspire me to keep pushing the boundaries of what I can
+          create. From mastering front-end technologies to exploring new
+          frameworks, each certification has equipped me with valuable tools and
+          insights that enhance my work as a developer.
+        </p>
+      </div>
+      <div class="main-div-centerproj">
+        <div class="achievementproj">
+          <img
+            src="./img/Achievement1.jpg"
+            alt="Achievement 1"
+            class="achievement-imgproj"
+          />
+          <h2 class="achievement-h2proj">Founder of Ashwini Recycling</h2>
+          <p class="achievement-textproj">
+            As the founder of Ashwini Recycling & Packaging India Pvt. Ltd., I
+            led the company’s vision to revolutionize plastic recycling and
+            sustainable packaging in India. We successfully manufactured over
+            1.5 million plastic crates and recycled more than 2 million
+            kilograms of plastic, contributing meaningfully to the circular
+            economy.
+          </p>
+        </div>
+
+        <div class="achievementproj">
+          <img
+            src="./img/Achievement2.jpg"
+            alt="Achievement 3"
+            class="achievement-imgproj"
+          />
+          <h2 class="achievement-h2proj">Emerging Entrepreneur Award</h2>
+          <p class="achievement-textproj">
+            Emerging Entrepreneur Award I was proud to be recognized with the
+            Emerging Entrepreneur Award for demonstrating innovation,
+            leadership, and impactful execution in the field of recycling and
+            manufacturing. This accolade reflects my commitment to driving
+            positive change in the industry and my dedication to sustainable
+            practices.
+          </p>
+        </div>
+      </div>
+      <div class="main-div-rightproj">
+        <div class="certificatesproj">
+          <h2 class="certificate-h2proj">Certificates</h2>
+          <div class="certificateproj">
+            <img
+              src="./img/certificate.jpg"
+              alt="Certificate 2"
+              class="certificate-imgproj"
+            />
+            <p class="certificate-textproj">HTML & CSS Certification</p>
+          </div>
+          <div class="certificateproj">
+            <img
+              src="./img/certificate.jpg"
+              alt="Certificate 2"
+              class="certificate-imgproj"
+            />
+            <p class="certificate-textproj">JavaScript Basics Certification</p>
+          </div>
+          <div class="certificateproj">
+            <img
+              src="./img/certificate.jpg"
+              alt="Certificate 3"
+              class="certificate-imgproj"
+            />
+            <p class="certificate-textproj">
+              Responsive Web Design Certification
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Main Content Achievement End -->
+    <!-- Main Content Project Start -->
+    <div class="main-contentach">
+      <div class="main-contentleftach">
+        <h1 class="main-contentleft-h1ach">Projects</h1>
+        <p class="main-contentleft-pach">
+          My projects reflect my passion for web development and my commitment
+          to creating engaging user experiences. Each project showcases my
+          skills in HTML, CSS, and JavaScript, with a focus on clean design,
+          responsive layouts, and interactive features. I enjoy experimenting
+          with new ideas and technologies, and I’m always looking for ways to
+          improve my work through feedback and iteration.Each project showcases
+          my skills in HTML, CSS, and JavaScript, with a focus on clean design,
+          responsive layouts, and interactive features. I enjoy experimenting
+          with new ideas and technologies, and I’m always looking for ways to
+          improve my work through feedback and iteration.
+        </p>
+      </div>
+      <div class="main-contentrightach">
+        <div class="projectach">
+          <img
+            src="./img/project-1.jpg"
+            alt="Project 1"
+            class="project-imgach"
+          />
+          <h2 class="project-h2ach">Personal Portfolio</h2>
+          <p class="project-textach">
+            A personal portfolio website showcasing my skills, projects, and
+            achievements as a front-end developer.
+          </p>
+        </div>
+        <div class="projectach">
+          <img
+            src="./img/project-2.avif"
+            alt="Project 2"
+            class="project-imgach"
+          />
+          <h2 class="project-h2ach">Interactive Quiz App</h2>
+          <p class="project-textach">
+            An interactive quiz application built with HTML, CSS, and
+            JavaScript, featuring multiple-choice questions and real-time
+            feedback.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- Main Content Project End -->
+    <!-- Main Content Start -->
+    <div class="main-contentcontact">
+      <div class="main-contentleftcontact">
+        <h1 class="main-content-h1contact">Contact Me</h1>
+        <p class="main-content-pcontact">
+          If you have any questions, feedback, or just want to say hello, feel
+          free to reach out! I’m always open to connecting with fellow
+          developers, potential collaborators, or anyone interested in my work.
+        </p>
+        <div class="main-content-socialcontact">
+          <a href="">
+            <img
+              src="./img/github-beige.png"
+              alt="whatsapp"
+              class="footer-linkedin"
+            />
+          </a>
+          <a href="">
+            <img
+              src="./img/email-beige.png"
+              alt="whatsapp"
+              class="footer-linkedin"
+            />
+          </a>
+        </div>
+      </div>
+      <div class="contact-form-divcontact">
+        <form
+          class="contact-formcontact"
+          name="contact-form"
+          action="https://formspree.io/f/xjvowzqk"
+          method="POST"
+        >
+          <div class="contact-form-elementcontact">
+            <h3>Your Name :</h3>
+            <input type="text" placeholder="Your Name" required />
+          </div>
+
+          <div class="contact-form-elementcontact">
+            <h3>Your Message:</h3>
+            <textarea placeholder="Your Message" required></textarea>
+          </div>
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
+    </div>
+    <!-- Main Content End -->
     <!--Footer Start-->
     <footer class="footer">
       <div class="footer-text">
