--- a/src/homepage.html
+++ b/src/homepage.html
@@ -31,7 +31,7 @@
         <h1 class="main-contentleft-h1">About Me</h1>
         <p class="main-contentleft-p">
           I’m a creative and detail-driven front-end developer who enjoys
-          turning ideas into visually engaging and responsive websites. With a
+          turning ideas into visualy engaging and responsive websites. With a
           strong foundation in HTML and CSS, I focus on crafting clean layouts,
           smooth transitions, and user-friendly interfaces that work beautifully
           across devices. I believe that design should not only look good but
